<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NiteLights</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_collection_demo">CollectionDemoActivity</string>
    <string name="demo_collection">Demo Collection</string>
    <string name="demo_external_activity"> Demo External Activity</string>
    <string name="dummy_section_text">Section %1d is just a dummy section</string>
    <string name="profile_name">profileName</string>
    <string name="profile_picture">profile picture</string>
    <string name="logout">logout</string>
    <string name="title_the_wire">The Wire</string>
    <string name="title_profile">Profile</string>
    <string name="title_venues">Venues</string>
    <string name="title_map">Map</string>
    <string name="title_venue_address">666 Hell Street</string>
    <string name="title_venue">Club La Boom Montreal</string>
    <string name="title_venue_rating">7.5/10</string>
    <string name="title_venue_num_commits">99 Attending</string>
    <string name="title_activity_map">Map</string>
    <string name="open_map">Open Map</string>
    <string name="committed_to"> Committed To</string>
    <string name="person_name">John Smith</string>
    <string name="all_venues">http://niteflow.com/AndroidDB/get_all_venues.php</string>
    <string name="title_activity_venue">Venue Page</string>
    <string name="title_activity_login">Login</string>
    <string name="profile_commit">Venue Name</string>
    <string name="committed_venue">Committed Venue:</string>

</resources>