<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	android:id="@+id/widget48"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
	android:id="@+id/widget46"
	android:layout_width="wrap_content"
	android:layout_height="91dp"
	android:orientation="vertical"
	android:layout_centerVertical="true"
	android:layout_centerHorizontal="true">
<TextView
	android:id="@+id/widget44"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/title_venue" 
	android:textSize="20sp"
    android:textStyle="bold"/>
<TextView
	android:id="@+id/widget42"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:text="@string/title_venue_num_commits" />

<TextView
    android:id="@+id/widget40"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/title_venue_address" />

<TextView
	android:id="@+id/widget43"
	android:layout_width="wrap_content"
	android:layout_height="26dp"
	android:text="@string/title_venue_rating"/>
</LinearLayout>
<LinearLayout
	android:id="@+id/widget47"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:layout_alignParentTop="true"
	android:layout_alignParentLeft="true">
<ImageView
	android:id="@+id/widget39"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content" 
	android:src="@drawable/discoball"/>
</LinearLayout>
</RelativeLayout>

