<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	android:id="@+id/widget48"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="#3b5998">
<LinearLayout
	android:id="@+id/widget46"
	android:layout_width="wrap_content"
	android:layout_height="91dp"
	android:orientation="vertical"
	android:layout_centerVertical="true"
	android:layout_centerHorizontal="true">
</LinearLayout>

<LinearLayout
	android:id="@+id/widget47"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:layout_alignParentTop="true"
	android:layout_alignParentLeft="true">
</LinearLayout>

<TextView
    android:id="@+id/activity_venue_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/venue_activity_rating"
    android:layout_centerHorizontal="true"
    android:layout_marginBottom="18dp"
    android:text="@string/title_venue"
    android:textColor="#ffffff"
    android:textSize="30sp"
    android:textStyle="bold" />

<TextView
    android:id="@+id/activity_venue_address"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_above="@+id/venue_activity_rating"
    android:layout_centerHorizontal="true"
    android:gravity="center"
    android:text="@string/title_venue_address"
     android:textSize="20sp"
    android:textColor="#ffffff" />

<ImageView
    android:id="@+id/venue_page_open_map_button"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignRight="@+id/venue_activity_rating"
    android:layout_marginBottom="17dp"
    android:src="@drawable/venue_map_icon" />

<TextView
    android:id="@+id/venue_num_commits"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/venue_page_open_map_button"
    android:layout_centerHorizontal="true"
    android:text="@string/title_venue_num_commits"
    android:textColor="#ffffff"
    android:textSize="40sp"
    android:typeface="sans" />

<ImageView
    android:id="@+id/venue_main_logo"
    android:layout_width="300dp"
    android:layout_height="175dp"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:scaleType="fitCenter"
    android:paddingTop="30dp"
    android:src="@drawable/letter_v_large" />

<ImageView
    android:id="@+id/venue_activity_rating"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_above="@+id/venue_num_commits"
    android:layout_centerHorizontal="true"
    android:src="@drawable/five_star" />

</RelativeLayout>

